# SIM-VICUS

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE_ADDITIONS  README.md  SIM-VICUS-session.pro
.github/workflows/: main.yml  solver_test.yml
FMUs/: readme.md
FMUs/CO2ComfortVentilation/: .gitignore  readme
FMUs/Qt/: fmus.pri
NandradCodeGenerator/projects/: CMakeLists.txt
NandradCodeGenerator/projects/cmake_local/: CMakeLists.txt
NandradCodeGenerator/src/: ClassInfo.cpp  ClassInfo.h  CodeGenerator.cpp  CodeGenerator.h  NandradCodeGenerator.cpp  constants.cpp  constants.h  main.cpp
NandradDevTests/projects/: .gitignore
NandradDevTests/src/: main.cpp  main_triangulation.cpp
NandradFMUGenerator/: .gitignore
NandradFMUGenerator/doc/: NandradFMUGenerator.1
NandradFMUGenerator/projects/: .gitignore
NandradFMUGenerator/projects/cmake_local/: CMakeLists.txt
NandradFMUGenerator/resources/: NandradFMUGenerator.icns  NandradFMUGenerator.qrc  NandradFMUGenerator.rc  gfx.qrc  modelDescription.xml.template  nandradfmugenerator.desktop
NandradFMUGenerator/src/: FMUVariableTableModel.cpp  FMUVariableTableModel.h  NandradFMUGeneratorWidget.cpp  NandradFMUGeneratorWidget.h  NandradFMUGeneratorWidget.ui  main.cpp
NandradSolver/doc/: .gitignore  Layout.xml  NandradSolver.1  NandradSolver.doxyfile  NandradSolverMainPage.h
NandradSolver/projects/cmake_local/: CMakeLists.txt
NandradSolver/src/: NM_AbstractController.h  NM_AbstractModel.cpp  NM_AbstractModel.h  NM_AbstractStateDependency.h  NM_AbstractTimeDependency.h  NM_AbstractTransientController.h  NM_ConstantZoneModel.cpp  NM_ConstantZoneModel.h  NM_ConstructionBalanceModel.cpp  NM_ConstructionBalanceModel.h  NM_ConstructionInsideBCModel.cpp  NM_ConstructionInsideBCModel.h  NM_ConstructionStatesModel.cpp  NM_ConstructionStatesModel.h  NM_Controller.cpp  NM_Controller.h  NM_DefaultModel.cpp  NM_DefaultModel.h  NM_DefaultStateDependency.cpp  NM_DefaultStateDependency.h  NM_Directories.cpp  NM_Directories.h  NM_FMIInputOutput.cpp  NM_FMIInputOutput.h  NM_HeatLoadSummationModel.cpp  NM_HeatLoadSummationModel.h  NM_HeatLoadSummationModelcpp  NM_HydraulicNetwork.cpp  NM_HydraulicNetwork.h  NM_HydraulicNetworkAbstractFlowElement.cpp  NM_HydraulicNetworkAbstractFlowElement.h  NM_HydraulicNetworkFlowElements.cpp  NM_HydraulicNetworkFlowElements.h  NM_HydraulicNetworkModel.cpp  NM_HydraulicNetworkModel.h  NM_HydraulicNetworkModelPrivate.h  NM_HydraulicNetworkModel_p.h  NM_IdealHeatingCoolingModel.cpp  NM_IdealHeatingCoolingModel.h  NM_IdealPipeRegisterModel.cpp  (+70 more)
NandradSolverFMI/projects/cmake_local/: CMakeLists.txt
NandradSolverFMI/src/: InstanceData.cpp  InstanceData.h  NandradModelFMU.cpp  NandradModelFMU.h
SIM-VICUS/doc/: SIM-VICUS.1
SIM-VICUS/projects/cmake_local/: CMakeLists.txt
SIM-VICUS/resources/: SIM-VICUS.desktop  SIM-VICUS.qrc  SIM-VICUS.rc  SIM-VICUS.xml  icons.qrc  modelDescription.xml.template
SIM-VICUS/src/: SVAboutDialog.cpp  SVAboutDialog.h  SVAboutDialog.ui  SVAbstractDatabaseEditWidget.cpp  SVAbstractDatabaseEditWidget.h  SVAcousticConstraintsCheckDialog.cpp  SVAcousticConstraintsCheckDialog.h  SVAcousticConstraintsCheckDialog.ui  SVAcousticConstraintsCheckWidget.cpp  SVAcousticConstraintsCheckWidget.h  SVAcousticConstraintsCheckWidget.ui  SVAutoSaveDialog.cpp  SVAutoSaveDialog.h  SVAutoSaveDialog.ui  SVButtonBar.cpp  SVButtonBar.h  SVChartUtils.cpp  SVChartUtils.h  SVClimateDataSortFilterProxyModel.cpp  SVClimateDataSortFilterProxyModel.h  SVClimateDataTableModel.cpp  SVClimateDataTableModel.h  SVClimateFileInfo.cpp  SVClimateFileInfo.h  SVCoSimCO2VentilationDialog.cpp  SVCoSimCO2VentilationDialog.h  SVCoSimCO2VentilationDialog.ui  SVCoSimSupplySystemDialog.cpp  SVCoSimSupplySystemDialog.h  SVCoSimSupplySystemDialog.ui  SVColorLegend.cpp  SVColorLegend.h  SVColorMap.cpp  SVColorMap.h  SVConstants.cpp  SVConstants.h  SVDBAcousticBoundaryConditionEditWidget.cpp  SVDBAcousticBoundaryConditionEditWidget.h  SVDBAcousticBoundaryConditionEditWidget.ui  SVDBAcousticBoundaryConditionTableModel.cpp  (+624 more)
View3D/projects/cmake_local/: CMakeLists.txt
View3D/src/: ctrans.c  getdat.c  heap.c  misc.c  polygn.c  prtyp.h  readvf.c  savevf.c  test3d.c  tmpstore.c  tmpstore.h  types.h  v3main.c  vglob.h  view3d.c  view3d.h  viewht.txt  viewobs.c  viewpp.c  viewunob.c  vxtrn.h
data/: db_ElectricEquipment.xml  db_acousticBuildingTemplates.xml  db_acousticComponents.xml  db_acousticReferenceComponent.xml  db_acousticReferenceComponents.xml  db_acousticSoundProtectionTemplates.xml  db_acousticTemplates.xml  db_boundaryConditions.xml  db_components.xml  db_constructions.xml  db_fluids.xml  db_internalLoads.xml  db_materials.xml  db_naturalVentilation.xml  db_networkComponents.xml  db_pipes.xml  db_schedules.xml  db_subSurfaceComponents.xml  db_windowGlazingSystems.xml  db_windows.xml  db_zoneControlThermostat.xml  db_zoneTemplate.xml
data/DB_climate/: Konstantopol_20C.c6b
data/Webinar/: L-Raum01.vicus  L-Raum02.vicus  L-Raum03.vicus  L-Raum04.vicus  L-Raum05.vicus
data/colormaps/: spectral.p2colormap  turbo.p2colormap  viridis.p2colormap
data/dxf/: P-End_1.0 G GR EG.dxf  P-End_1.1 G GR OG.dxf  SKDF.P.E1_Mitte.dxf
data/examples/: .gitignore  CampusBuilding.vicus  DestestNetwork_CE1.vicus  District_Heating_Network.vicus  Low_Temperature_Network.vicus  SimQuality.vicus  SingleFamilyHouse.vicus
data/hydraulicNetworks/: .gitignore  EFH_1_Qevap_TWW.tsv  EFH_2_Qevap_TWW.tsv  MiniNetwork.nandrad  hydrNet.nandrad  hydrNetwork_building.nandrad  hydrNetwork_building_withValve.nandrad  hydrNetwork_district.nandrad  hydraulicNetworks.bak  hydraulicNetworks.p2  (+3 more)
debian/: .gitignore  CMakeLists.txt  readme.md  update_source_code_archive.sh
doc/: README.md
doc/HydraulicNetworks/code/IBK/projects/cmake_local/: CMakeLists.txt
doc/HydraulicNetworks/code/IBK/projects/cmake_local/cmake_pri/: CMakeLists.txt
doc/HydraulicNetworks/code/SuiteSparse/projects/cmake_local/: CMakeLists.txt
docs/: readme.md
lib_x64/: .gitignore  NandradSolverFMI.exp
plugins/: readme.md
scripts/: ascii2cpp.py
(+4206 files in other folders)
